homeWork-13-DI - добавил недостающие тесты