@@ -1,13 +1,14 @@
 package ru.otus;
 
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import ru.otus.appcontainer.AppComponentsContainerImpl;
+import ru.otus.appcontainer.api.AppComponent;
+import ru.otus.appcontainer.api.AppComponentsContainerConfig;
 import ru.otus.config.AppConfig;
-import ru.otus.services.EquationPreparer;
-import ru.otus.services.IOService;
-import ru.otus.services.PlayerService;
+import ru.otus.services.*;
 
 import java.io.PrintStream;
 import java.lang.reflect.Modifier;
@@ -16,6 +17,7 @@ import java.util.Scanner;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatCode;
 
 class AppTest {
 
@@ -55,8 +57,7 @@ class AppTest {
 
         var fields = Arrays.stream(component.getClass().getDeclaredFields())
                 .filter(f -> !Modifier.isStatic(f.getModifiers()))
-                .peek(f -> f.setAccessible(true))
-                .collect(Collectors.toList());
+                .peek(f -> f.setAccessible(true)).toList();
 
         for (var field: fields){
             var fieldValue = field.get(component);
@@ -64,5 +65,54 @@ class AppTest {
                     EquationPreparer.class, PrintStream.class, Scanner.class);
         }
 
+    }
+
+    @DisplayName("В контексте не должно быть компонентов с одинаковым именем")
+    @Test
+    public void shouldNotAllowTwoComponentsWithSameName() throws Exception {
+        assertThatCode(()-> new AppComponentsContainerImpl(ConfigWithTwoComponentsWithSameName.class))
+                .isInstanceOf(Exception.class);
+    }
+
+    @DisplayName("При попытке достать из контекста отсутствующий или дублирующийся компонент, должно выкидываться исключение")
+    @Test
+    public void shouldThrowExceptionWhenContainerContainsMoreThanOneOrNoneExpectedComponents() throws Exception {
+        var ctx = new AppComponentsContainerImpl(ConfigWithTwoSameComponents.class);
+
+        assertThatCode(()-> ctx.getAppComponent(EquationPreparer.class))
+                .isInstanceOf(Exception.class);
+
+        assertThatCode(()-> ctx.getAppComponent(PlayerService.class))
+                .isInstanceOf(Exception.class);
+    }
+
+    @AppComponentsContainerConfig(order = 1)
+    public static class ConfigWithTwoComponentsWithSameName {
+        public ConfigWithTwoComponentsWithSameName() {
+        }
+
+        @AppComponent(order = 1, name = "equationPreparer")
+        public EquationPreparer equationPreparer1() {
+            return new EquationPreparerImpl();
+        }
+
+        @AppComponent(order = 1, name = "equationPreparer")
+        public IOService ioService() {
+            return new IOServiceStreams(System.out, System.in);
+        }
+    }
+
+    @AppComponentsContainerConfig(order = 1)
+    public static class ConfigWithTwoSameComponents{
+
+        @AppComponent(order = 1, name = "equationPreparer1")
+        public EquationPreparer equationPreparer1() {
+            return new EquationPreparerImpl();
+        }
+
+        @AppComponent(order = 1, name = "equationPreparer2")
+        public EquationPreparer equationPreparer2() {
+            return new EquationPreparerImpl();
+        }
     }
 }
